fixed output box overlapping issue

--- a/style.css
+++ b/style.css
@@ -576,4 +576,7 @@ footer div{
     margin-left: -3vmax;
   
 }
+.right{
+    margin-top: 3vmax;
+}
 }
